Ejercicio 18 y texto de html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
 
+  <h1>Ejercicios JavaScript</h1>
+  <p>Para visualizar los resultados, abre la consola del navegador</p>
+
   <!-- Ejercicios JS -->
 
   <!-- Manejo de Strings
